﻿更新履歴

==== Ver 0.9.2.1(2010/05/**)
 * Retweetカウントの取得の際に時間がかかるため、プログレスバーを表示するようにした
 * タスクトレイへのアイコン追加タイミングを変更した
 * ユーザー情報ダイアログで、「認証済み(Verified)」の文字をクリックした際に、本家の認証済みアカウントについての説明ページを開くようにした
 * 詳細表示のユーザー名でのツールチップ表示を取りやめた。左クリックしてホームを開く、右クリックでメニューを開く機能はそのままです。
 * htn.to,amzn.toのURL展開に対応
 * Followersリストの取得リトライがうまく機能していなかったので修正
==== Ver 0.9.2.0(2010/05/23)
 * Ctrl+Pでユーザープロフィール画面が開いてしまうことがあったバグを修正
 * 通信時のメッセージログで時間も参照できるように。表示件数を20件に。
 * 設定ファイル読み込み時のエラーチェックを見直し
 * ソート順表示の方向が逆だったのを修正
 * その他機能に「この発言のRetweet回数を確認」を追加。Webでは見えなかった100人以上のRTでも確認できます。100人確認ごとにAPIを1消費します。（例：550人がRTしていれば6消費）
 * ニコ動の短縮パターンに漏れがあり、誤動作していたバグ修正
 * 投稿失敗時に発言履歴に残らない場合があった不具合修正
 * 表示中の画像プレビューが閉じてしまう場合がある不具合修正
 * 詳細表示のユーザーアイコンダブルクリックでも発言者のホームを開けるようにした
 * 通信後に例外が起きることがあったバグを修正
 * TumblrのプレビューでPostTypeが画像以外のためにプレビュー失敗した場合にPostTypeを表示するようにした
 * 画像プレビューでTumblrのサムネイル画像への直リンクがプレビューできなかったバグを修正
 * PixivプレビューでR-18/R-18GのいずれかのタグがついたURLの場合に表示メッセージを変更するようにした
 * Retweetされた回数の表示機能追加（「その他機能」メニュー）
==== Ver 0.9.1.0(2010/05/19)
 * リスト部のソート順表示が2カラムの場合に対応できていなかった問題を修正
==== Ver 0.9.0.0(2010/05/19)
 * 初期設定でのMentionsの更新間隔を180秒に、取得数を40件へ。バージョンアップの方は手動で調整してください。
 * 発言リストの列順序の初期値を変更
 * 画像プレビューをTumblrに対応(posttype=photoのみの対応となります)、フォト蔵に対応
 * 起動時のFollowersリスト取得処理に失敗した場合、初期読み込み処理の最終段階で再試行するようにした
 * Twitterが相変わらずおかしいので、一時期無効にしていた公式RTがFav済みで流れてくる件の対策を復活
 * ユーザープロフィール画面追加。フォロー状況の表示、フォロー/フォロー解除もダイアログからできます。APIを2消費します。
   * 右クリックメニュー、操作メニューにプロフィール表示を追加。ショートカットキーはAlt+P。
   * 発言詳細領域の名前表示部分の右クリックメニューから、発言者のプロフィール表示、フォロー・フォロー解除が行えるようにした
   * 発言詳細の文中にある@ID右クリックメニューからユーザープロフィールの確認ができるようにした
   * 自己紹介の部分：サムネイルと右クリックメニュー以外は、@IDやハッシュタグのリンク化など、詳細表示とほぼ同等の機能があります。
   * クリックしてジャンプできる場所はツールチップでジャンプ先URLを表示するようにした
   * 最新の発言を表示するようにした。日時とSourceも表示します。
   * 発言、自己紹介の各表示エリアで右クリックからコピー・すべて選択ができるようにした
   * ユーザー情報ダイアログで認証済みアカウントかどうかを表示するように
 * 画面が白くなる問題に対処
 * 未読カウントがずれる問題に対処
 * Altキー2回押しでフォーカスがSplitContainerに移る不具合修正
 * 自身のバージョンが取れない場合があったので、取得方法変更
 * メニュ→その他機能からもハッシュタグ関連機能にアクセスできるようにした
 * URL短縮時に、文末のスラッシュも含めるように変更
 * 発言入力欄と残文字数ラベルのフォーカス遷移順序入れ替え（MSAA対応）