@@ -7,6 +7,7 @@
  * 詳細表示のユーザー名でのツールチップ表示を取りやめた。左クリックしてホームを開く、右クリックでメニューを開く機能はそのままです。
  * htn.to,amzn.toのURL展開に対応
  * Followersリストの取得リトライがうまく機能していなかったので修正
+ * piapro,flickr,pixivにある画像への直リンクの場合にプレビューが動作しなかったバグを修正
 ==== Ver 0.9.2.0(2010/05/23)
  * Ctrl+Pでユーザープロフィール画面が開いてしまうことがあったバグを修正
  * 通信時のメッセージログで時間も参照できるように。表示件数を20件に。
